--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/groq": "^1.1.7",
     "@ai-sdk/openai": "^1.1.9",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-label": "^2.1.2",
@@ -20,6 +21,7 @@
     "ai": "^4.1.28",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "endent": "^2.1.0",
     "lucide-react": "^0.475.0",
     "next": "15.1.6",
     "react": "^19.0.0",
